--- a/package.json
+++ b/package.json
@@ -46,33 +46,35 @@
     "lint:fix": "eslint --ext .js,.jsx,.vue,.ts,.tsx src --fix"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3040820220424001",
+    "@dcloudio/uni-app": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-components": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3050420220804004",
     "express": "^4.17.1",
     "js-cookie": "2.2.0",
     "js-error-collection": "^1.0.7",
     "pinia": "^2.0.18",
     "vue": "^3.2.37",
-    "vue-i18n": "^9.1.9"
+    "vue-i18n": "^9.1.9",
+    "vue-router": "4.0.14"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.0.7",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3040820220424001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3040820220424001",
     "@babel/eslint-parser": "7.16.3",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-typescript": "^7.6.0",
+    "@dcloudio/types": "^3.0.7",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3050420220804004",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3050420220804004",
     "@types/jest": "<27",
     "@types/mockjs": "1.0.3",
     "@types/node": "15.0.1",
@@ -80,14 +82,14 @@
     "@typescript-eslint/parser": "^5.11.0",
     "@vitejs/plugin-vue": "1.10.2",
     "@vitejs/plugin-vue-jsx": "1.3.1",
+    "@vue/cli-plugin-typescript": "^4.2.0",
     "@vue/cli-plugin-unit-jest": "4.5.17",
     "@vue/cli-service": "4.5.17",
-    "@vue/cli-plugin-typescript": "^4.2.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "babel-jest": "<27",
     "eslint": "7.32.0",
-    "eslint-plugin-import": "2.25.3",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "2.25.3",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-vue": "8.1.1",
     "husky": "7.0.2",
@@ -106,7 +108,7 @@
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.5.11",
     "unplugin-vue-components": "^0.17.14",
-    "vite": "2.9.12",
+    "vite": "^2.9.14",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "1.2.1",
