--- a/package.json
+++ b/package.json
@@ -64,13 +64,13 @@
     "pinia": "^2.0.18",
     "vue": "^3.2.37",
     "vue-i18n": "^9.1.9",
-    "vue-router": "4.0.14"
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.16.3",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-typescript": "^7.6.0",
-    "@dcloudio/types": "^3.0.7",
+    "@dcloudio/types": "^2.6.12",
     "@dcloudio/uni-automator": "3.0.0-alpha-3050420220804004",
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3050420220804004",
     "@dcloudio/uni-stacktracey": "3.0.0-alpha-3050420220804004",
