--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,9 +52,7 @@
   },
   //"files": [],
   //include包含文件夹会被ts进行读取
-  "include": ["src", "typings", "auto-imports.d.ts"]
-  //exclude 可以去除include中指定的文件，不能去除file指定的文件
-  //  "exclude": [
-  ////    "src/src1.ts"
-  //  ]
+  "include": ["src", "src/typings", "auto-imports.d.ts"],
+  //exclude 可以去除include中指定的文件，不能去除files指定的文件
+  "exclude": ["src/pages.json", "src/pages.ts"]
 }
