--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     /*模块解析选项*/
     "esModuleInterop": true, //允许export=导出，由import from 导入
     "moduleResolution": "node", // 模块解析策略，ts默认用node的解析策略，即相对的方式导入
-    "baseUrl": "./", // 用于解析非绝对模块名的基本目录，相对模块不受影响。
+    "baseUrl": ".", // 用于解析非绝对模块名的基本目录，相对模块不受影响。
     "paths": {
       "@/*": ["src/*"],
       "~/*": ["src/typings/*"]
@@ -54,6 +54,6 @@
   /*根选项*/
   //使用小技巧：在填写路径时 ** 表示任意目录， * 表示任意文件。
   // "files": [], // 指定需要被编译的文件
-  "include": ["src", "src/**/*", "src/**/*.vue", "src/typings", "auto-imports.d.ts", "src/typings/shims .d.ts"], // 指定被编译文件所在的目录、文件
-  "exclude": ["src/pages.json", "src/pages.ts"] // 指定不需要被编译的目录、文件，不能去除files指定的文件
+  "include": ["src", "src/**/*", "src/**/*.vue", "src/typings", "auto-imports.d.ts"] // 指定被编译文件所在的目录、文件
+  // "exclude": ["src/pages.json", "src/pages.ts"] // 指定不需要被编译的目录、文件，不能去除files指定的文件
 }
