--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
  * https://blog.csdn.net/u010100877/article/details/125501185
  */
 {
+  "extends": "@vue/tsconfig/tsconfig.json",
   "compilerOptions": {
     /*项目选项*/
     "target": "esnext", // 指定ts编译成ES的版本。
@@ -36,13 +37,13 @@
 
     /*模块解析选项*/
     "esModuleInterop": true, //允许export=导出，由import from 导入
-    "moduleResolution": "node", // 模块解析策略，ts默认用node的解析策略，即相对的方式导入
+    // "moduleResolution": "node", // 模块解析策略，ts默认用node的解析策略，即相对的方式导入
     "baseUrl": ".", // 用于解析非绝对模块名的基本目录，相对模块不受影响。
     "paths": {
       "@/*": ["src/*"],
       "~/*": ["src/typings/*"]
     }, // 用于设置模块名称基于baseUrl的路径映射关系。
-    "types": ["@dcloudio/types", "@types/node"], // 用来指定需要包含的模块，并将其包含在全局范围内。
+    "types": ["@dcloudio/types"], // 用来指定需要包含的模块，并将其包含在全局范围内。
 
     /*高级选项*/
     "preserveConstEnums": true, // 是否禁止删除枚举常量生成代码中的声明
@@ -54,6 +55,6 @@
   /*根选项*/
   //使用小技巧：在填写路径时 ** 表示任意目录， * 表示任意文件。
   // "files": [], // 指定需要被编译的文件
-  "include": ["src", "src/**/*", "src/**/*.vue", "src/typings", "auto-imports.d.ts"] // 指定被编译文件所在的目录、文件
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/typings"] // 指定被编译文件所在的目录、文件
   // "exclude": ["src/pages.json", "src/pages.ts"] // 指定不需要被编译的目录、文件，不能去除files指定的文件
 }
