--- a/package.json
+++ b/package.json
@@ -67,11 +67,9 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3080120230428001",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3080120230428001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3080120230428001",
-    "js-cookie": "2.2.0",
     "pinia": "^2.0.18",
     "vue": "^3.2.45",
-    "vue-i18n": "^9.1.9",
-    "vue-router": "^4.1.3"
+    "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.16.3",
@@ -106,7 +104,7 @@
     "scss": "0.2.4",
     "typescript": "^4.5.4",
     "vite": "4.0.3",
-    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-mock": "^3.0.0",
     "vite-plugin-rsw": "^2.0.11",
     "vue-tsc": "0.28.1"
   },
