--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "prettier": "^2.7.1",
     "scss": "0.2.4",
     "typescript": "^4.5.4",
+    "uni-router-interceptor": "^2.0.1",
     "vite": "4.0.3",
     "vite-plugin-mock": "^3.0.0",
     "vite-plugin-rsw": "^2.0.11",
