--- a/package.json
+++ b/package.json
@@ -100,7 +100,10 @@
     "jest-transform-stub": "^2.0.0",
     "majestic": "1.8.1",
     "mockjs": "1.1.0",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.3.0",
     "prettier": "^2.7.1",
+    "sass": "^1.62.1",
     "scss": "0.2.4",
     "typescript": "^4.5.4",
     "uni-router-interceptor": "^2.0.1",
